--- a/src/index.css
+++ b/src/index.css
@@ -157,6 +157,35 @@ body{
   background:#ffffff22;
 }
 
+.moveSelect{
+  width: 100%;
+  height: 26px;
+  border: 1px solid #9a9a9a;
+  border-radius: 2px;
+  background: #fff;
+
+  font-size: 12px;
+  padding: 0 26px 0 8px; /* место справа под стрелку */
+
+  outline: none;
+
+  /* убрать нативные стрелки */
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+
+  /* стрелка справа */
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='6' viewBox='0 0 10 6'%3E%3Cpath d='M1 1l4 4 4-4' fill='none' stroke='%23666' stroke-width='1.5' stroke-linecap='round'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 8px center;
+  background-size: 10px 6px;
+}
+
+/* чтобы в IE/старом Edge не было стрелки (на всякий случай) */
+.moveSelect::-ms-expand{
+  display: none;
+}
+
 
 /* Responsive */
 @media (max-width: 900px){
