--- a/src/index.css
+++ b/src/index.css
@@ -22,11 +22,11 @@ body{
 /* Top bar */
 .topbar{
   height:52px;
-  background:var(--blue2);
+  background:#0a6c9b;
   color:#fff;
   display:flex;
   align-items:center;
-  justify-content:space-between;
+  justify-content: space-between; /* ← КЛЮЧЕВО */
   padding:0 14px;
 }
 .topbar__title{
@@ -111,11 +111,11 @@ body{
 .footer{
   height: 40px;
   background: #0a6c9b;
-  color: #fff;                 /* ← чтобы текст был белый */
+  color: #fff;                 
   display: flex;
   align-items: center;
-  justify-content: flex-start; /* ← чтобы элементы шли слева */
-  gap: 32px;                   /* ← расстояние как на макете */
+  justify-content: flex-start; 
+  gap: 32px;                   
   padding: 0 14px;
   font-size: 12px;
 }
@@ -171,11 +171,11 @@ body{
   background: #fff;
 
   font-size: 12px;
-  padding: 0 26px 0 8px; /* место справа под стрелку */
+  padding: 0 26px 0 8px; 
+  margin-top: 8px;
 
   outline: none;
 
-  /* убрать нативные стрелки */
   appearance: none;
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -187,7 +187,6 @@ body{
   background-size: 10px 6px;
 }
 
-/* чтобы в IE/старом Edge не было стрелки (на всякий случай) */
 .moveSelect::-ms-expand{
   display: none;
 }
@@ -257,8 +256,93 @@ body{
   resize:none;
 }
 
+/* User dropdown */
+.topbar__right{
+  display:flex;
+  align-items:center;
+  justify-content:flex-end;
+  min-width:80px;
+}
 
-/* Responsive */
+.userBtn{
+  display:flex;
+  align-items:center;
+  gap:10px;
+  border:none;
+  background:transparent;
+  cursor:pointer;
+  padding:4px 6px;
+}
+
+.avatarCircle{
+  width:34px;
+  height:34px;
+  border-radius:999px;
+  background:#fff;
+  color:#000;
+  display:grid;
+  place-items:center;
+}
+
+.chevron{
+  width:10px;
+  height:10px;
+  border-right:2px solid #fff;
+  border-bottom:2px solid #fff;
+  display:inline-block;
+  transition: transform .15s ease;
+  opacity: .95;
+}
+
+.chevron.up{
+  transform: rotate(-135deg); /* ВВЕРХ */
+}
+
+.chevron.down{
+  transform: rotate(45deg); /* ВНИЗ */
+}
+
+
+.userMenu{
+  position:absolute;
+  right:0;
+  top:46px;
+  width:180px;
+  background:#fff;
+  border-radius:10px;
+  box-shadow:0 14px 40px #00000040;
+  border:1px solid #00000010;
+  overflow:hidden;
+}
+
+.userMenu::before{
+  content:"";
+  position:absolute;
+  right:34px;
+  top:-6px;
+  width:12px;
+  height:12px;
+  background:#fff;
+  transform: rotate(45deg);
+  border-left:1px solid #00000010;
+  border-top:1px solid #00000010;
+}
+
+.userMenuItem{
+  width:100%;
+  text-align:left;
+  padding:12px 14px;
+  border:none;
+  background:transparent;
+  cursor:pointer;
+  font-size:16px;
+}
+
+.userMenuItem:hover{
+  background:#f3f6f8;
+  text-decoration: underline;
+}
+
 @media (max-width: 900px){
   .board{grid-template-columns:1fr}
 }
